--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -20,7 +20,8 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toRightOf="@id/nametextView"
-        android:text="1"
+        app:layout_constraintRight_toRightOf="parent"
+        android:text="41"
         android:textSize="32sp"
         android:layout_marginLeft="20dp"/>
 
